--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,21 @@
+# https://github.com/h5bp/server-configs-apache
+# https://securityheaders.com/
+
 # База
-Options -Indexes
+AddDefaultCharset utf-8
+
+#Options All -Indexes
+Options -Indexes -MultiViews
 ServerSignature Off
-php_flag expose_php Off
-#ServerTokens Prod # 500
-#TraceEnable Off # 500
 
-
-# безопасность заголовков https://securityheaders.com/
+# безопасность заголовков
 <IfModule mod_headers.c>
     # Удаляем следы сервера
     Header always unset Server
+    Header unset X-Powered-By
     Header always unset X-Powered-By
+
+    Header merge Cache-Control "no-transform"
 
     # wp
     Header always unset X-Pingback
@@ -20,66 +25,79 @@ php_flag expose_php Off
     Header always set X-Content-Type-Options "nosniff"
 
     # Защита от кликджекинга (для старых браузеров)
-    Header always set X-Frame-Options "SAMEORIGIN"
+    Header always set X-Frame-Options "SAMEORIGIN" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
 
     # Политика реферера - передает домен при кросс-доменных запросах
-    Header always set Referrer-Policy "strict-origin-when-cross-origin"
+    Header always set Referrer-Policy "strict-origin-when-cross-origin" "expr=%{CONTENT_TYPE} =~ m#text\/(css|html|javascript)|application\/pdf|xml#i"
 
     # Политика разрешений - оставляем только необходимое
     Header always set Permissions-Policy "usb=(), magnetometer=(), accelerometer=(), gyroscope=()"
+#     Header always set Permissions-Policy "accelerometer=(),autoplay=(),camera=(),display-capture=(),document-domain=(),encrypted-media=(),fullscreen=(),geolocation=(),gyroscope=(),magnetometer=(),microphone=(),midi=(),payment=(),picture-in-picture=(),publickey-credentials-get=(),screen-wake-lock=(),sync-xhr=(self),usb=(),web-share=(),xr-spatial-tracking=()" "expr=%{CONTENT_TYPE} =~ m#text\/(html|javascript)|application\/pdf|xml#i"
 
     # Защита от XSS (для старых браузеров)
     Header always set X-XSS-Protection "1; mode=block"
+
+    #     Header always set Strict-Transport-Security "max-age=16070400; includeSubDomains" "expr=%{HTTPS} == 'on'"
+    #     # (1) Enable your site for HSTS preload inclusion.
+    #     # Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" "expr=%{HTTPS} == 'on'"
+
 </IfModule>
 
-
-# tips: RedirectMatch бытрее
-# блокировка всего что начинается с "." или "_"
 <IfModule mod_alias.c>
-    #<FilesMatch "^[._]">
-    #    Order Allow,Deny
-    #    Deny from all
-    #</FilesMatch>
+    #
+    # блокировка всего что начинается с "." или "_"
     RedirectMatch 404 /[._][^/]*$
-</IfModule>
+    # v2 <FilesMatch "^[._]">
+    # Order Allow,Deny
+    # Deny from all
+    # </FilesMatch>
+    # v3 <IfModule mod_rewrite.c>
+    # RewriteEngine On
+    # RewriteCond %{REQUEST_URI} "!(^|/)\.well-known/([^./]+./?)+$" [NC]
+    # RewriteCond %{SCRIPT_FILENAME} -d [OR]
+    # RewriteCond %{SCRIPT_FILENAME} -f
+    # RewriteRule "(^|/)\." - [F]
+    # </IfModule>
 
-
-
-# блокировка по расширению
-<IfModule mod_alias.c>
-    #<FilesMatch "\.(back|bak|backup|old|swp|swo|swn|dump|db|sqlite|sqlite3|ini|phps|fla|psd|log|sh|lock|md|sql|tpl|twig|bat|ps|example|yaml|yml|config|conf|config\.js|blade\.php)$">
-    #    Order Allow,Deny
-    #    Deny from all
-    #</FilesMatch>
+    #
+    # блокировка по расширению
     RedirectMatch 404 .*\.(txt|back|bak|backup|old|swp|swo|swn|dump|db|sqlite|sqlite3|ini|phps|fla|psd|log|sh|lock|md|sql|tpl|twig|bat|ps|example|yaml|yml|config|conf|config\.js|blade\.php)$
-</IfModule>
+    # v2 <FilesMatch "\.(back|bak|backup|old|swp|swo|swn|dump|db|sqlite|sqlite3|ini|phps|fla|psd|log|sh|lock|md|sql|tpl|twig|bat|ps|example|yaml|yml|config|conf|config\.js|blade\.php)$">
+    # Order Allow,Deny
+    # Deny from all
+    # </FilesMatch>
 
-# блокировка конкретных файлов
-<IfModule mod_alias.c>
-    #<FilesMatch "^(composer\.json|package\.json|package-lock\.json|phpunit\.xml|phpcs\.xml|phpmd\.xml|Dockerfile|Makefile|LICENSE|wp-config-sample\.php|wp-config\.php|xmlrpc\.php)$">
-    #    Order Allow,Deny
-    #    Deny from all
-    #</FilesMatch>
+    #
+    # блокировка конкретных файлов
     RedirectMatch 404 ^/(composer\.json|package\.json|package-lock\.json|phpunit\.xml|phpcs\.xml|phpmd\.xml|Dockerfile|Makefile|LICENSE|wp-config-sample\.php|wp-config\.php|xmlrpc\.php)$
+    #v2 <FilesMatch "^(composer\.json|package\.json|package-lock\.json|phpunit\.xml|phpcs\.xml|phpmd\.xml|Dockerfile|Makefile|LICENSE|wp-config-sample\.php|wp-config\.php|xmlrpc\.php)$">
+    # Order Allow,Deny
+    # Deny from all
+    # </FilesMatch>
+
+    #
+    # Запрещаем PHP во всех папках wp-content (кроме плагинов и тем)
+    RedirectMatch 404 ^/(wp-includes|cache|uploads|backup|upgrade|tmp|vendor|includes|inc|themes|plugins|mu-plugins|app)/.*\.php$
+    # v2 RedirectMatch 404 /wp-includes/.*\.php$
+    # RedirectMatch 404 /cache/.*\.php$
+    # RedirectMatch 404 /uploads/.*\.php$
+    # RedirectMatch 404 /backup/.*\.php$
+    # RedirectMatch 404 /upgrade/.*\.php$
+    # RedirectMatch 404 /tmp/.*\.php$
+    # RedirectMatch 404 /vendor/.*\.php$
+    # RedirectMatch 404 /includes/.*\.php$
+    # RedirectMatch 404 /inc/.*\.php$
+    # RedirectMatch 404 /themes/.*\.php$
+    # RedirectMatch 404 /plugins/.*\.php$
+    # RedirectMatch 404 /mu-plugins/.*\.php$
+    # RedirectMatch 404 /app/.*\.php$
+    #v3 <IfModule mod_authz_core.c>
+    # <FilesMatch "(^#.*#|\.(bak|conf|dist|fla|in[ci]|log|orig|psd|sh|sql|sw[op])|~)$">
+    # Require all denied
+    # </FilesMatch>
 </IfModule>
 
-# Запрещаем PHP во всех папках wp-content (кроме плагинов и тем)
-<IfModule mod_alias.c>
-#    RedirectMatch 404 /wp-includes/.*\.php$
-#    RedirectMatch 404 /cache/.*\.php$
-#    RedirectMatch 404 /uploads/.*\.php$
-#    RedirectMatch 404 /backup/.*\.php$
-#    RedirectMatch 404 /upgrade/.*\.php$
-#    RedirectMatch 404 /tmp/.*\.php$
-#    RedirectMatch 404 /vendor/.*\.php$
-#    RedirectMatch 404 /includes/.*\.php$
-#    RedirectMatch 404 /inc/.*\.php$
-#    RedirectMatch 404 /themes/.*\.php$
-#    RedirectMatch 404 /plugins/.*\.php$
-#    RedirectMatch 404 /mu-plugins/.*\.php$
-#    RedirectMatch 404 /app/.*\.php$
-    RedirectMatch 404 ^/(wp-includes|cache|uploads|backup|upgrade|tmp|vendor|includes|inc|themes|plugins|mu-plugins|app)/.*\.php$
-</IfModule>
+
 
 <FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf|webp|woff2?|ttf|eot|svg)$">
     Header set Cache-Control "max-age=31536000, public"
@@ -132,3 +150,189 @@ php_flag expose_php Off
     Deny from 20.62.114.0
     # /blocks
 </IfModule>
+<IfModule mod_deflate.c>
+    <IfModule mod_setenvif.c>
+        <IfModule mod_headers.c>
+            SetEnvIfNoCase ^(Accept-EncodXng|X-cept-Encoding|X{15}|~{15}|-{15})$ ^((gzip|deflate)\s*,?\s*)+|[X~-]{4,13}$ HAVE_Accept-Encoding
+            RequestHeader append Accept-Encoding "gzip,deflate" env=HAVE_Accept-Encoding
+        </IfModule>
+    </IfModule>
+    <IfModule mod_filter.c>
+        AddOutputFilterByType DEFLATE "application/atom+xml" \
+                                      "application/javascript" \
+                                      "application/json" \
+                                      "application/ld+json" \
+                                      "application/manifest+json" \
+                                      "application/rdf+xml" \
+                                      "application/rss+xml" \
+                                      "application/schema+json" \
+                                      "application/geo+json" \
+                                      "application/vnd.ms-fontobject" \
+                                      "application/wasm" \
+                                      "application/x-font-ttf" \
+                                      "application/x-javascript" \
+                                      "application/x-web-app-manifest+json" \
+                                      "application/xhtml+xml" \
+                                      "application/xml" \
+                                      "font/eot" \
+                                      "font/opentype" \
+                                      "font/otf" \
+                                      "font/ttf" \
+                                      "image/bmp" \
+                                      "image/svg+xml" \
+                                      "image/vnd.microsoft.icon" \
+                                      "image/x-icon" \
+                                      "text/cache-manifest" \
+                                      "text/calendar" \
+                                      "text/css" \
+                                      "text/html" \
+                                      "text/javascript" \
+                                      "text/plain" \
+                                      "text/markdown" \
+                                      "text/vcard" \
+                                      "text/vnd.rim.location.xloc" \
+                                      "text/vtt" \
+                                      "text/x-component" \
+                                      "text/x-cross-domain-policy" \
+                                      "text/xml"
+
+    </IfModule>
+    <IfModule mod_mime.c>
+        AddEncoding gzip              svgz
+    </IfModule>
+</IfModule>
+<IfModule mod_expires.c>
+    ExpiresActive on
+    ExpiresDefault                                      "access plus 1 year"
+    ExpiresByType image/vnd.microsoft.icon              "access plus 1 week"
+    ExpiresByType image/x-icon                          "access plus 1 week"
+    ExpiresByType application/manifest+json             "access plus 1 week"
+    ExpiresByType application/x-web-app-manifest+json   "access"
+    ExpiresByType text/cache-manifest                   "access"
+    ExpiresByType application/atom+xml                  "access plus 1 hour"
+    ExpiresByType application/rdf+xml                   "access plus 1 hour"
+    ExpiresByType application/rss+xml                   "access plus 1 hour"
+    ExpiresByType text/html                             "access"
+    ExpiresByType text/markdown                         "access"
+    ExpiresByType text/calendar                         "access"
+    ExpiresByType text/x-cross-domain-policy            "access plus 1 week"
+    ExpiresByType application/json                      "access"
+    ExpiresByType application/ld+json                   "access"
+    ExpiresByType application/schema+json               "access"
+    ExpiresByType application/geo+json                  "access"
+    ExpiresByType application/xml                       "access"
+    ExpiresByType text/xml                              "access"
+
+    # Generic: WebAssembly
+    # ExpiresByType application/wasm                    "access plus 1 year" # default
+
+    # Generic: Assets
+    # ExpiresByType application/javascript              "access plus 1 year" # default
+    # ExpiresByType application/x-javascript            "access plus 1 year" # default
+    # ExpiresByType text/javascript                     "access plus 1 year" # default
+    # ExpiresByType text/css                            "access plus 1 year" # default
+
+    # Generic: Medias
+    # ExpiresByType audio/*                             "access plus 1 year" # default
+    # ExpiresByType image/*                             "access plus 1 year" # default
+    # ExpiresByType video/*                             "access plus 1 year" # default
+    # ExpiresByType font/*                              "access plus 1 year" # default
+
+</IfModule>
+<IfModule mod_mime.c>
+    AddType application/atom+xml                        atom
+    AddType application/json                            json map topojson
+    AddType application/ld+json                         jsonld
+    AddType application/rss+xml                         rss
+    AddType application/geo+json                        geojson
+    AddType application/rdf+xml                         rdf
+    AddType application/xml                             xml
+    AddType text/javascript                             js mjs
+    AddType application/manifest+json                   webmanifest
+    AddType application/x-web-app-manifest+json         webapp
+    AddType text/cache-manifest                         appcache
+    AddType audio/mp4                                   f4a f4b m4a
+    AddType audio/ogg                                   oga ogg opus
+    AddType image/avif                                  avif avifs
+    AddType image/bmp                                   bmp
+    AddType image/jxl                                   jxl
+    AddType image/svg+xml                               svg svgz
+    AddType image/webp                                  webp
+    AddType video/mp4                                   f4v f4p m4v mp4
+    AddType video/ogg                                   ogv
+    AddType video/webm                                  webm
+    AddType video/x-flv                                 flv
+    AddType image/x-icon                                cur ico
+    AddType application/wasm                            wasm
+    AddType font/woff                                   woff
+    AddType font/woff2                                  woff2
+    AddType application/vnd.ms-fontobject               eot
+    AddType font/ttf                                    ttf
+    AddType font/collection                             ttc
+    AddType font/otf                                    otf
+    AddType application/octet-stream                    safariextz
+    AddType application/x-bb-appworld                   bbaw
+    AddType application/x-chrome-extension              crx
+    AddType application/x-opera-extension               oex
+    AddType application/x-xpinstall                     xpi
+    AddType text/calendar                               ics
+    AddType text/markdown                               markdown md
+    AddType text/vcard                                  vcard vcf
+    AddType text/vnd.rim.location.xloc                  xloc
+    AddType text/vtt                                    vtt
+    AddType text/x-component                            htc
+</IfModule>
+<IfModule mod_mime.c>
+    AddCharset utf-8 .appcache \
+                     .bbaw \
+                     .css \
+                     .htc \
+                     .ics \
+                     .js \
+                     .json \
+                     .manifest \
+                     .map \
+                     .markdown \
+                     .md \
+                     .mjs \
+                     .topojson \
+                     .vtt \
+                     .vcard \
+                     .vcf \
+                     .webmanifest \
+                     .xloc
+</IfModule>
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    Options +FollowSymlinks
+    # Options +SymLinksIfOwnerMatch
+    # RewriteBase /
+</IfModule>
+
+# force https
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteCond %{HTTPS} !=on
+    # (1)
+    # RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/
+    # RewriteCond %{REQUEST_URI} !^/\.well-known/cpanel-dcv/[\w-]+$
+    # RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+</IfModule>
+
+# force delete www
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteCond %{HTTPS} =on
+    RewriteRule ^ - [E=PROTO:https]
+    RewriteCond %{HTTPS} !=on
+    RewriteRule ^ - [E=PROTO:http]
+    # RewriteCond %{HTTPS} !=on
+    RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+    RewriteRule ^ %{ENV:PROTO}://%1%{REQUEST_URI} [R=301,L]
+</IfModule>
+<IfModule mod_rewrite.c>
+     RewriteEngine On
+     RewriteCond %{REQUEST_METHOD} ^TRACE [NC]
+     RewriteRule .* - [R=405,L]
+ </IfModule>
