--- a/.htaccess
+++ b/.htaccess
@@ -1,27 +1,14 @@
-# https://github.com/h5bp/server-configs-apache
-# https://securityheaders.com/
-
-# База
 AddDefaultCharset utf-8
-
-#Options All -Indexes
+# Options All -Indexes
 Options -Indexes -MultiViews
 ServerSignature Off
 
-# безопасность заголовков
 <IfModule mod_headers.c>
-    # Удаляем следы сервера
     Header always unset Server
-    Header unset X-Powered-By
     Header always unset X-Powered-By
-
     Header merge Cache-Control "no-transform"
-
-    # wp
     Header always unset X-Pingback
     Header always unset Link
-
-    # Защита от MIME-сниффинга
     Header always set X-Content-Type-Options "nosniff"
 
     # Защита от кликджекинга (для старых браузеров)
@@ -41,10 +28,39 @@ ServerSignature Off
     #     # (1) Enable your site for HSTS preload inclusion.
     #     # Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" "expr=%{HTTPS} == 'on'"
 
-</IfModule>
+    # Предзагрузка шрифтов и критических ресурсов
+    Header append Link "<https://fonts.googleapis.com>; rel=preconnect; crossorigin"
+    Header append Link "<https://fonts.gstatic.com>; rel=preconnect; crossorigin"
 
+    # Кеширование
+    <FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf|webp|woff2?|ttf|eot|svg)$">
+        Header set Cache-Control "max-age=31536000, public"
+    </FilesMatch>
+
+#    # Разное время кэширования для разных типов
+#    <FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|webp|avif|jxl|svg)$">
+#        Header set Cache-Control "max-age=31536000, public, immutable"
+#    </FilesMatch>
+#
+#    <FilesMatch "\.(js|mjs)$">
+#        Header set Cache-Control "max-age=31536000, public, immutable"
+#    </FilesMatch>
+#
+#    <FilesMatch "\.(css)$">
+#        Header set Cache-Control "max-age=31536000, public, immutable"
+#    </FilesMatch>
+#
+#    <FilesMatch "\.(woff2?|ttf|eot|otf)$">
+#        Header set Cache-Control "max-age=31536000, public, immutable"
+#    </FilesMatch>
+#
+#    # HTML не кэшируем или кэшируем ненадолго
+#    <FilesMatch "\.(html|htm)$">
+#        Header set Cache-Control "max-age=0, private, no-store, no-cache, must-revalidate"
+#    </FilesMatch>
+
+</IfModule>
 <IfModule mod_alias.c>
-    #
     # блокировка всего что начинается с "." или "_"
     RedirectMatch 404 /[._][^/]*$
     # v2 <FilesMatch "^[._]">
@@ -59,7 +75,6 @@ ServerSignature Off
     # RewriteRule "(^|/)\." - [F]
     # </IfModule>
 
-    #
     # блокировка по расширению
     RedirectMatch 404 .*\.(txt|back|bak|backup|old|swp|swo|swn|dump|db|sqlite|sqlite3|ini|phps|fla|psd|log|sh|lock|md|sql|tpl|twig|bat|ps|example|yaml|yml|config|conf|config\.js|blade\.php)$
     # v2 <FilesMatch "\.(back|bak|backup|old|swp|swo|swn|dump|db|sqlite|sqlite3|ini|phps|fla|psd|log|sh|lock|md|sql|tpl|twig|bat|ps|example|yaml|yml|config|conf|config\.js|blade\.php)$">
@@ -67,7 +82,6 @@ ServerSignature Off
     # Deny from all
     # </FilesMatch>
 
-    #
     # блокировка конкретных файлов
     RedirectMatch 404 ^/(composer\.json|package\.json|package-lock\.json|phpunit\.xml|phpcs\.xml|phpmd\.xml|Dockerfile|Makefile|LICENSE|wp-config-sample\.php|wp-config\.php|xmlrpc\.php)$
     #v2 <FilesMatch "^(composer\.json|package\.json|package-lock\.json|phpunit\.xml|phpcs\.xml|phpmd\.xml|Dockerfile|Makefile|LICENSE|wp-config-sample\.php|wp-config\.php|xmlrpc\.php)$">
@@ -75,7 +89,6 @@ ServerSignature Off
     # Deny from all
     # </FilesMatch>
 
-    #
     # Запрещаем PHP во всех папках wp-content (кроме плагинов и тем)
     RedirectMatch 404 ^/(wp-includes|cache|uploads|backup|upgrade|tmp|vendor|includes|inc|themes|plugins|mu-plugins|app)/.*\.php$
     # v2 RedirectMatch 404 /wp-includes/.*\.php$
@@ -96,13 +109,6 @@ ServerSignature Off
     # Require all denied
     # </FilesMatch>
 </IfModule>
-
-
-
-<FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf|webp|woff2?|ttf|eot|svg)$">
-    Header set Cache-Control "max-age=31536000, public"
-</FilesMatch>
-
 <IfModule mod_setenvif.c>
     Order Allow,Deny
     Allow from all
@@ -145,10 +151,100 @@ ServerSignature Off
     #SetEnvIfNoCase User-Agent "bingbot" bad_bot
 
     Deny from env=bad_bot
+</IfModule>
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    Options +FollowSymlinks
+    # Options +SymLinksIfOwnerMatch
+    # RewriteBase /
 
-    # wp scan
-    Deny from 20.62.114.0
-    # /blocks
+    # Блокировка TRACE/TRACK методов
+    RewriteCond %{REQUEST_METHOD} ^(TRACE|TRACK) [NC]
+    RewriteRule .* - [R=405,L]
+
+    # Защита от инъекций через X-Forwarded-For
+    RewriteCond %{HTTP:X-Forwarded-For} !^$ [NC]
+    RewriteCond %{HTTP:X-Forwarded-For} ^\d+\.\d+\.\d+\.\d+$ [NC]
+    RewriteRule .* - [F,L]
+
+#    # force delete www
+#    RewriteCond %{HTTPS} =on
+#    RewriteRule ^ - [E=PROTO:https]
+#    RewriteCond %{HTTPS} !=on
+#    RewriteRule ^ - [E=PROTO:http]
+#    # RewriteCond %{HTTPS} !=on
+#    RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+#    RewriteRule ^ %{ENV:PROTO}://%1%{REQUEST_URI} [R=301,L]
+
+#    # force https
+#    RewriteCond %{HTTPS} !=on
+#    # (1)
+#    # RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/
+#    # RewriteCond %{REQUEST_URI} !^/\.well-known/cpanel-dcv/[\w-]+$
+#    # RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
+#    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+</IfModule>
+<IfModule mod_mime.c>
+    AddType application/atom+xml                        atom
+    AddType application/json                            json map topojson
+    AddType application/ld+json                         jsonld
+    AddType application/rss+xml                         rss
+    AddType application/geo+json                        geojson
+    AddType application/rdf+xml                         rdf
+    AddType application/xml                             xml
+    AddType text/javascript                             js mjs
+    AddType application/manifest+json                   webmanifest
+    AddType application/x-web-app-manifest+json         webapp
+    AddType text/cache-manifest                         appcache
+    AddType audio/mp4                                   f4a f4b m4a
+    AddType audio/ogg                                   oga ogg opus
+    AddType image/avif                                  avif avifs
+    AddType image/bmp                                   bmp
+    AddType image/jxl                                   jxl
+    AddType image/svg+xml                               svg svgz
+    AddType image/webp                                  webp
+    AddType video/mp4                                   f4v f4p m4v mp4
+    AddType video/ogg                                   ogv
+    AddType video/webm                                  webm
+    AddType video/x-flv                                 flv
+    AddType image/x-icon                                cur ico
+    AddType application/wasm                            wasm
+    AddType font/woff                                   woff
+    AddType font/woff2                                  woff2
+    AddType application/vnd.ms-fontobject               eot
+    AddType font/ttf                                    ttf
+    AddType font/collection                             ttc
+    AddType font/otf                                    otf
+    AddType application/octet-stream                    safariextz
+    AddType application/x-bb-appworld                   bbaw
+    AddType application/x-chrome-extension              crx
+    AddType application/x-opera-extension               oex
+    AddType application/x-xpinstall                     xpi
+    AddType text/calendar                               ics
+    AddType text/markdown                               markdown md
+    AddType text/vcard                                  vcard vcf
+    AddType text/vnd.rim.location.xloc                  xloc
+    AddType text/vtt                                    vtt
+    AddType text/x-component                            htc
+    AddCharset utf-8 \
+    .appcache \
+    .bbaw \
+    .css \
+    .htc \
+    .ics \
+    .js \
+    .json \
+    .manifest \
+    .map \
+    .markdown \
+    .md \
+    .mjs \
+    .topojson \
+    .vtt \
+    .vcard \
+    .vcf \
+    .webmanifest \
+    .xloc
 </IfModule>
 <IfModule mod_deflate.c>
     <IfModule mod_setenvif.c>
@@ -239,100 +335,3 @@ ServerSignature Off
     # ExpiresByType font/*                              "access plus 1 year" # default
 
 </IfModule>
-<IfModule mod_mime.c>
-    AddType application/atom+xml                        atom
-    AddType application/json                            json map topojson
-    AddType application/ld+json                         jsonld
-    AddType application/rss+xml                         rss
-    AddType application/geo+json                        geojson
-    AddType application/rdf+xml                         rdf
-    AddType application/xml                             xml
-    AddType text/javascript                             js mjs
-    AddType application/manifest+json                   webmanifest
-    AddType application/x-web-app-manifest+json         webapp
-    AddType text/cache-manifest                         appcache
-    AddType audio/mp4                                   f4a f4b m4a
-    AddType audio/ogg                                   oga ogg opus
-    AddType image/avif                                  avif avifs
-    AddType image/bmp                                   bmp
-    AddType image/jxl                                   jxl
-    AddType image/svg+xml                               svg svgz
-    AddType image/webp                                  webp
-    AddType video/mp4                                   f4v f4p m4v mp4
-    AddType video/ogg                                   ogv
-    AddType video/webm                                  webm
-    AddType video/x-flv                                 flv
-    AddType image/x-icon                                cur ico
-    AddType application/wasm                            wasm
-    AddType font/woff                                   woff
-    AddType font/woff2                                  woff2
-    AddType application/vnd.ms-fontobject               eot
-    AddType font/ttf                                    ttf
-    AddType font/collection                             ttc
-    AddType font/otf                                    otf
-    AddType application/octet-stream                    safariextz
-    AddType application/x-bb-appworld                   bbaw
-    AddType application/x-chrome-extension              crx
-    AddType application/x-opera-extension               oex
-    AddType application/x-xpinstall                     xpi
-    AddType text/calendar                               ics
-    AddType text/markdown                               markdown md
-    AddType text/vcard                                  vcard vcf
-    AddType text/vnd.rim.location.xloc                  xloc
-    AddType text/vtt                                    vtt
-    AddType text/x-component                            htc
-</IfModule>
-<IfModule mod_mime.c>
-    AddCharset utf-8 .appcache \
-                     .bbaw \
-                     .css \
-                     .htc \
-                     .ics \
-                     .js \
-                     .json \
-                     .manifest \
-                     .map \
-                     .markdown \
-                     .md \
-                     .mjs \
-                     .topojson \
-                     .vtt \
-                     .vcard \
-                     .vcf \
-                     .webmanifest \
-                     .xloc
-</IfModule>
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    Options +FollowSymlinks
-    # Options +SymLinksIfOwnerMatch
-    # RewriteBase /
-</IfModule>
-
-# force https
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteCond %{HTTPS} !=on
-    # (1)
-    # RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/
-    # RewriteCond %{REQUEST_URI} !^/\.well-known/cpanel-dcv/[\w-]+$
-    # RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
-</IfModule>
-
-# force delete www
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteCond %{HTTPS} =on
-    RewriteRule ^ - [E=PROTO:https]
-    RewriteCond %{HTTPS} !=on
-    RewriteRule ^ - [E=PROTO:http]
-    # RewriteCond %{HTTPS} !=on
-    RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-    RewriteRule ^ %{ENV:PROTO}://%1%{REQUEST_URI} [R=301,L]
-</IfModule>
-<IfModule mod_rewrite.c>
-     RewriteEngine On
-     RewriteCond %{REQUEST_METHOD} ^TRACE [NC]
-     RewriteRule .* - [R=405,L]
- </IfModule>
