--- a/.htaccess
+++ b/.htaccess
@@ -29,8 +29,8 @@ ServerSignature Off
     #     # Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" "expr=%{HTTPS} == 'on'"
 
     # Предзагрузка шрифтов и критических ресурсов
-    Header append Link "<https://fonts.googleapis.com>; rel=preconnect; crossorigin"
-    Header append Link "<https://fonts.gstatic.com>; rel=preconnect; crossorigin"
+#    Header append Link "<https://fonts.googleapis.com>; rel=preconnect; crossorigin"
+#    Header append Link "<https://fonts.gstatic.com>; rel=preconnect; crossorigin"
 
     # Кеширование
     <FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf|webp|woff2?|ttf|eot|svg)$">
@@ -76,7 +76,7 @@ ServerSignature Off
     # </IfModule>
 
     # блокировка по расширению
-    RedirectMatch 404 .*\.(txt|back|bak|backup|old|swp|swo|swn|dump|db|sqlite|sqlite3|ini|phps|fla|psd|log|sh|lock|md|sql|tpl|twig|bat|ps|example|yaml|yml|config|conf|config\.js|blade\.php)$
+    RedirectMatch 404 .*\.(back|bak|backup|old|swp|swo|swn|dump|db|sqlite|sqlite3|ini|phps|fla|psd|log|sh|lock|md|sql|tpl|twig|bat|ps|example|yaml|yml|config|conf|config\.js|blade\.php)$
     # v2 <FilesMatch "\.(back|bak|backup|old|swp|swo|swn|dump|db|sqlite|sqlite3|ini|phps|fla|psd|log|sh|lock|md|sql|tpl|twig|bat|ps|example|yaml|yml|config|conf|config\.js|blade\.php)$">
     # Order Allow,Deny
     # Deny from all
@@ -254,44 +254,44 @@ ServerSignature Off
         </IfModule>
     </IfModule>
     <IfModule mod_filter.c>
-        AddOutputFilterByType DEFLATE "application/atom+xml" \
-                                      "application/javascript" \
-                                      "application/json" \
-                                      "application/ld+json" \
-                                      "application/manifest+json" \
-                                      "application/rdf+xml" \
-                                      "application/rss+xml" \
-                                      "application/schema+json" \
-                                      "application/geo+json" \
-                                      "application/vnd.ms-fontobject" \
-                                      "application/wasm" \
-                                      "application/x-font-ttf" \
-                                      "application/x-javascript" \
-                                      "application/x-web-app-manifest+json" \
-                                      "application/xhtml+xml" \
-                                      "application/xml" \
-                                      "font/eot" \
-                                      "font/opentype" \
-                                      "font/otf" \
-                                      "font/ttf" \
-                                      "image/bmp" \
-                                      "image/svg+xml" \
-                                      "image/vnd.microsoft.icon" \
-                                      "image/x-icon" \
-                                      "text/cache-manifest" \
-                                      "text/calendar" \
-                                      "text/css" \
-                                      "text/html" \
-                                      "text/javascript" \
-                                      "text/plain" \
-                                      "text/markdown" \
-                                      "text/vcard" \
-                                      "text/vnd.rim.location.xloc" \
-                                      "text/vtt" \
-                                      "text/x-component" \
-                                      "text/x-cross-domain-policy" \
-                                      "text/xml"
-
+        AddOutputFilterByType DEFLATE \
+        "application/atom+xml" \
+        "application/javascript" \
+        "application/json" \
+        "application/ld+json" \
+        "application/manifest+json" \
+        "application/rdf+xml" \
+        "application/rss+xml" \
+        "application/schema+json" \
+        "application/geo+json" \
+        "application/vnd.ms-fontobject" \
+        "application/wasm" \
+        "application/x-font-ttf" \
+        "application/x-javascript" \
+        "application/x-web-app-manifest+json" \
+        "application/xhtml+xml" \
+        "application/xml" \
+        "font/eot" \
+        "font/opentype" \
+        "font/otf" \
+        "font/ttf" \
+        "image/bmp" \
+        "image/svg+xml" \
+        "image/vnd.microsoft.icon" \
+        "image/x-icon" \
+        "text/cache-manifest" \
+        "text/calendar" \
+        "text/css" \
+        "text/html" \
+        "text/javascript" \
+        "text/plain" \
+        "text/markdown" \
+        "text/vcard" \
+        "text/vnd.rim.location.xloc" \
+        "text/vtt" \
+        "text/x-component" \
+        "text/x-cross-domain-policy" \
+        "text/xml"
     </IfModule>
     <IfModule mod_mime.c>
         AddEncoding gzip              svgz
@@ -333,5 +333,4 @@ ServerSignature Off
     # ExpiresByType image/*                             "access plus 1 year" # default
     # ExpiresByType video/*                             "access plus 1 year" # default
     # ExpiresByType font/*                              "access plus 1 year" # default
-
 </IfModule>
