--- a/.htaccess
+++ b/.htaccess
@@ -200,15 +200,15 @@ Options -Indexes -MultiViews +FollowSymLinks
     RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
     RewriteRule ^(.*)$ https://%1/$1 [L,R=301]
 
-    # Защита от хотлинкинга
-    RewriteCond %{HTTP_REFERER} !^$
-    RewriteCond %{HTTP_REFERER} !^https?://(www\.)?%{HTTP_HOST} [NC]
-    RewriteRule \.(jpg|jpeg|png|gif|webp|svg)$ - [F,NC,L]
+#    # Защита от хотлинкинга
+#    RewriteCond %{HTTP_REFERER} !^$
+#    RewriteCond %{HTTP_REFERER} !^https?://(www\.)?%{HTTP_HOST} [NC]
+#    RewriteRule \.(jpg|jpeg|png|gif|webp|svg)$ - [F,NC,L]
 
-    # Добавление завершающего слэша
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_URI} !(.*)/$
-    RewriteRule ^(.*)$ /$1/ [L,R=301]
+#    # Добавление завершающего слэша
+#    RewriteCond %{REQUEST_FILENAME} !-f
+#    RewriteCond %{REQUEST_URI} !(.*)/$
+#    RewriteRule ^(.*)$ /$1/ [L,R=301]
 
     # Редирект index.php/html на корень
     RewriteCond %{THE_REQUEST} /index\.(php|html?) [NC]
