--- a/.htaccess
+++ b/.htaccess
@@ -165,7 +165,7 @@ Options -Indexes -MultiViews +FollowSymLinks
     ExpiresByType application/atom+xml                "access plus 1 hour"
     ExpiresByType application/rdf+xml                 "access plus 1 hour"
     ExpiresByType application/rss+xml                 "access plus 1 hour"
-    ExpiresByType text/html                           "access"
+    ExpiresByType text/html                           "access plus 30 minutes"
     ExpiresByType text/markdown                       "access"
     ExpiresByType text/calendar                       "access"
     ExpiresByType text/x-cross-domain-policy          "access plus 1 week"
