--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,6 @@ RewriteOptions InheritDownBefore
     Header always unset Link
     Header always unset X-Powered-By
     Header always unset X-Pingback
-    Header always unset Link
     Header always set X-Content-Type-Options "nosniff"
 </IfModule>
 <IfModule mod_rewrite.c>
@@ -21,7 +20,7 @@ RewriteOptions InheritDownBefore
 
     # скрываем с пустым user agent
     RewriteCond %{HTTP_USER_AGENT} ^(-)?$
-    RewriteRule .* - [F,L]
+    RewriteRule .* - [R=404,L,NC]
 
     # скрываем по имени директории
     RewriteRule ^.*/(upgrade|backup|backups|node_modules|logs|tmp|temp|bin)/.* - [R=404,L,NC]
@@ -34,6 +33,9 @@ RewriteOptions InheritDownBefore
 
     # скрываем по расширению файла
     RewriteRule \.(pot|cache|pem|key|crt|csr|p12|pfx|~|temp|tmp|save|orig|back|bak|backup|old|swp|swo|swn|dump|db|sqlite|sqlite3|ini|phps|fla|psd|log|sh|lock|md|sql|tpl|twig|bat|ps|example|yaml|yml|config|conf)$ - [R=404,L,NC]
+
+    # fix webp-express
+    RewriteRule ^(.*/)?(webp-realizer\.php)$ - [L,NC]
 
     # скрываем по имени директории с php
     RewriteRule ^.*/(vendor|uploads|cache|plugins|mu-plugins)/.*\.php$ - [R=404,L,NC]
